# ResearchMemoryKit

./: .gitattributes  .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml  rmk.json
.github/workflows/: validate.yml
docs/: adoption-guide.md  agent-prompts.md  agent-prompts.zh-CN.md  ci.md  comparison.md  desensitization.md  gate-demo.md  gated-research-workflow.md  gated-research-workflow.zh-CN.md  portfolio-plan.md  publishing-safely.md  rmk-check.md  theory.md  theory.zh-CN.md
docs/blog/: ai-research-agents-need-gates-zh.md  ai-research-agents-need-gates.md
docs/case-studies/: creative-pipeline-project.md  engineering-delivery-project.md  research-paper-project.md
docs/github-actions/: rmk-check.yml  validate.yml
examples/fictional-paper-project/: AGENTS.md  README.md  rmk.json
examples/fictional-paper-project/memory/: CURRENT_STATE.md  DECISIONS.md  EXPERIMENT_LOG.md  FAILED_ATTEMPTS.md  PITFALLS.md  README.md  SESSION_LOG.md  WORKFLOW.md
examples/fictional-paper-project/registry/: README.md
examples/toy-research-project/: AGENTS.md  README.md  rmk.json
examples/toy-research-project/memory/: CURRENT_STATE.md  DECISIONS.md  EXPERIMENT_LOG.md  FAILED_ATTEMPTS.md  PITFALLS.md  README.md  SESSION_LOG.md  WORKFLOW.md
examples/toy-research-project/registry/: README.md
memory/: CURRENT_STATE.md  DECISIONS.md  README.md  SESSION_LOG.md  WORKFLOW.md
researchmemorykit/: __init__.py  __main__.py  checker.py  cli.py
scripts/: demo_gate.py  enable_github_actions.py  init_memory.py  validate_public_repo.py
templates/delivery-project/: AGENTS.md  DECISION_LOG.md  DELIVERY_INDEX.md  PROJECT_STATE.md  WORK_LOG.md  rmk.json
templates/minimal/: AGENTS.md  CURRENT_STATE.md  DECISIONS.md  SESSION_LOG.md  rmk.json
templates/research-project/: AGENTS.md  rmk.json
templates/research-project/memory/: CURRENT_STATE.md  DECISIONS.md  EXPERIMENT_LOG.md  FAILED_ATTEMPTS.md  PITFALLS.md  README.md  SESSION_LOG.md  (+1 more)
tests/: __init__.py  test_bundled_projects.py  test_checker.py  test_demo_gate.py  test_public_validation.py
(+7 files in other folders)
