[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "researchmemorykit"
version = "0.2.0"
description = "A gated memory layer for trustworthy AI-assisted research workflows."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Zhengyang Chen" }
]
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Quality Assurance"
]

[project.urls]
Homepage = "https://github.com/qzSOS/ResearchMemoryKit"
Repository = "https://github.com/qzSOS/ResearchMemoryKit"
Issues = "https://github.com/qzSOS/ResearchMemoryKit/issues"

[project.scripts]
rmk = "researchmemorykit.cli:main"

[tool.setuptools]
packages = ["researchmemorykit"]

