[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "researchmemorykit"
version = "0.2.0"
description = "A Markdown-first project memory and gated workflow for AI-assisted research."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Zhengyang Chen" }
]
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Quality Assurance"
]

[project.urls]
Homepage = "https://github.com/qzSOS/ResearchMemoryKit"
Repository = "https://github.com/qzSOS/ResearchMemoryKit"
Issues = "https://github.com/qzSOS/ResearchMemoryKit/issues"

[project.scripts]
rmk = "researchmemorykit.cli:main"

[tool.setuptools]
packages = ["researchmemorykit"]
